# nchoosek

./: .gitignore  CMakeLists.txt  README.md
examples/: example_01.cpp
src/: nchoosek.h
